--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier-plugin-solidity": "^1.0.0-beta.18"
   },
   "dependencies": {
+    "node-telegram-bot-api": "^0.61.0",
     "package.json": "^2.0.1"
   }
 }
